--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@mui/material": "^7.1.1",
     "animejs": "^4.0.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "sass": "^1.89.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
